--- a/index.html
+++ b/index.html
@@ -7,17 +7,45 @@
 </head>
 <body>
 
-    <h1>О нас</h1>
-    <p>Для наших гостей мы создали <i>концептуально новое игровое пространство виртуальной реальности</i> в центральной части города.</p>
-    <p>Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира.</p>
-    <blockquote>
-        <p>
-            <b>GAME OVER</b> - это место незабываемых впечатлений
-        </p>
-        <cite>
-            Аркадий Абакшин, создатель игровой территории GAME OVER
-        </cite>
-    </blockquote>
-    
+    <div>
+
+        <div>
+            <h1>У нас есть всё для классного отдыха с друзьями!</h1>
+            <ul>
+                <li>VR очки</li>
+                <li>Аудио-система 5.1 с отличным звуком</li>
+                <li>Караоке (4 микрофона)</li>
+                <li>Настольные игры</li>
+                <li>Кино сервисы Netflix, IVI, MegoGo, КиноПоиск, Okko</li>
+                <li>PlayStation 5</li>
+            </ul>
+        </div>
+
+        <div>
+            <h1>Наши залы</h1>
+            <ol>
+                <li>80's vibes</li>
+                <li>Star wars</li>
+                <li>Wild west</li>
+                <li>Neon style</li>
+            </ol>
+        </div>
+        
+    </div>
+
+    <div>
+        <h1>О нас</h1>
+        <p>Для наших гостей мы создали <i>концептуально новое игровое пространство виртуальной реальности</i> в центральной части города.</p>
+        <p>Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира.</p>
+        <blockquote>
+            <p>
+                <b>GAME OVER</b> - это место незабываемых впечатлений
+            </p>
+            <cite>
+                Аркадий Абакшин, создатель игровой территории GAME OVER
+            </cite>
+        </blockquote>
+    </div>
+
 </body>
 </html>
