--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
 </head>
 <body>
 
-    <div>
+        <div>
+            <h1>Меню</h1>
+            <ul>
+                <li><a href="#halls">Залы</a></li>
+                <li><a href="#about_us">О нас</a></li>
+                <li><a href="">Бронь</a></li>
+                <li><a href="">Отзывы</a></li>
+                <li><a href="#contacts">Контакты</a></li>
+            </ul>
+        </div>
 
         <div>
             <h1>У нас есть всё для классного отдыха с друзьями!</h1>
@@ -21,19 +30,18 @@
             </ul>
         </div>
 
-        <div>
+        <div id="halls">
             <h1>Наши залы</h1>
             <ol>
-                <li>80's vibes</li>
-                <li>Star wars</li>
-                <li>Wild west</li>
-                <li>Neon style</li>
+                <li><a href="/vibes.html">80's vibes</a></li>
+                <li><a href="/starwars.html">Star wars</a></li>
+                <li><a href="/wildwest.html">Wild west</a></li>
+                <li><a href="/neon.html">Neon style</a></li>
             </ol>
         </div>
-        
-    </div>
 
-    <div>
+
+    <div id="about_us">
         <h1>О нас</h1>
         <p>Для наших гостей мы создали <i>концептуально новое игровое пространство виртуальной реальности</i> в центральной части города.</p>
         <p>Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира.</p>
@@ -45,6 +53,17 @@
                 Аркадий Абакшин, создатель игровой территории GAME OVER
             </cite>
         </blockquote>
+    </div>
+
+    <div id="contacts">
+        <h1>Контакты</h1>
+        <p>г. Москва ул. Аквамарина. 16</p>
+        <p><a href="tel:+79509302893">8(950)930-28-93</a></p>
+        <p><a href="mailto:GameOver@gmail.com">GameOver@gmail.com</a></p>
+        <ul>
+            <li><a href="https://vk.com/">Vkontakte</a></li>
+            <li><a href="">Telegram</a></li>
+        </ul>
     </div>
 
 </body>
