--- a/index.html
+++ b/index.html
@@ -1,70 +1,107 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
 
-        <div>
-            <h1>Меню</h1>
-            <ul>
-                <li><a href="#halls">Залы</a></li>
-                <li><a href="#about_us">О нас</a></li>
-                <li><a href="">Бронь</a></li>
-                <li><a href="">Отзывы</a></li>
-                <li><a href="#contacts">Контакты</a></li>
-            </ul>
-        </div>
+    <link rel="icon" type="image/svg+xml" href="img/icon.svg" />
+    <link rel="icon" type="image/png" href="img/logo.png" />
+  </head>
+  <body>
+    <div>
+        <img src="img/logo.png" alt="Логотип GO" width="120">
+    </div>
 
-        <div>
-            <h1>У нас есть всё для классного отдыха с друзьями!</h1>
-            <ul>
-                <li>VR очки</li>
-                <li>Аудио-система 5.1 с отличным звуком</li>
-                <li>Караоке (4 микрофона)</li>
-                <li>Настольные игры</li>
-                <li>Кино сервисы Netflix, IVI, MegoGo, КиноПоиск, Okko</li>
-                <li>PlayStation 5</li>
-            </ul>
-        </div>
+    <div>
+      <h1>Меню</h1>
+      <ul>
+        <li><a href="#halls">Залы</a></li>
+        <li><a href="#about_us">О нас</a></li>
+        <li><a href="">Бронь</a></li>
+        <li><a href="">Отзывы</a></li>
+        <li><a href="#contacts">Контакты</a></li>
+      </ul>
+    </div>
 
-        <div id="halls">
-            <h1>Наши залы</h1>
-            <ol>
-                <li><a href="/vibes.html">80's vibes</a></li>
-                <li><a href="/starwars.html">Star wars</a></li>
-                <li><a href="/wildwest.html">Wild west</a></li>
-                <li><a href="/neon.html">Neon style</a></li>
-            </ol>
-        </div>
+    <div>
+      <h1>У нас есть всё для классного отдыха с друзьями!</h1>
+      <ul>
+        <li> 
+            <figure>
+                <img src="img/vr.jpg" alt="VR очки">
+                <figcaption>VR очки</figcaption>
+            </figure>
+        </li>
+        <li>
+            <figure>
+                <img src="img/audio.jpg" alt="Аудио-система">
+                <figcaption>Аудио-система 5.1 с отличным звуком</figcaption>
+            </figure>
+        </li>
+        <li>
+            <figure>
+                <img src="img/micro.jpg" alt="Караоке">
+                <figcaption>Караоке (4 микрофона)</figcaption>
+            </figure>
+        </li>
+        <li>
+            <figure>
+                <img src="img/game.jpg" alt="Настольные игры">
+                <figcaption>Настольные игры</figcaption>
+            </figure>
+        </li>
+        <li>
+            <figure>
+                <img src="img/netflix.jpg" alt="Кино сервисы">
+                <figcaption>Кино сервисы Netflix, IVI, MegoGo, КиноПоиск, Okko</figcaption>
+            </figure>
+        </li>
+        <li>
+            <figure>
+                <img src="img/sony.jpg" alt="PlayStation">
+                <figcaption>PlayStation 5</figcaption>
+            </figure>
+        </li>
+      </ul>
+    </div>
 
+    <div id="halls">
+      <h1>Наши залы</h1>
+      <ol>
+        <li><a href="/vibes.html">80's vibes</a></li>
+        <li><a href="/starwars.html">Star wars</a></li>
+        <li><a href="/wildwest.html">Wild west</a></li>
+        <li><a href="/neon.html">Neon style</a></li>
+      </ol>
+    </div>
 
     <div id="about_us">
-        <h1>О нас</h1>
-        <p>Для наших гостей мы создали <i>концептуально новое игровое пространство виртуальной реальности</i> в центральной части города.</p>
-        <p>Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира.</p>
-        <blockquote>
-            <p>
-                <b>GAME OVER</b> - это место незабываемых впечатлений
-            </p>
-            <cite>
-                Аркадий Абакшин, создатель игровой территории GAME OVER
-            </cite>
-        </blockquote>
+      <h1>О нас</h1>
+      <p>
+        Для наших гостей мы создали
+        <i>концептуально новое игровое пространство виртуальной реальности</i> в
+        центральной части города.
+      </p>
+      <p>
+        Каждый день мы стараемся создавать для вас самую лучшую игровую
+        атмосферу и радовать Вас топовыми игровыми разработками со всего мира.
+      </p>
+      <blockquote>
+        <p><b>GAME OVER</b> - это место незабываемых впечатлений</p>
+        <cite> Аркадий Абакшин, создатель игровой территории GAME OVER </cite>
+      </blockquote>
     </div>
 
     <div id="contacts">
-        <h1>Контакты</h1>
-        <p>г. Москва ул. Аквамарина. 16</p>
-        <p><a href="tel:+79509302893">8(950)930-28-93</a></p>
-        <p><a href="mailto:GameOver@gmail.com">GameOver@gmail.com</a></p>
-        <ul>
-            <li><a href="https://vk.com/">Vkontakte</a></li>
-            <li><a href="">Telegram</a></li>
-        </ul>
+      <h1>Контакты</h1>
+      <p>г. Москва ул. Аквамарина. 16</p>
+      <p><a href="tel:+79509302893">8(950)930-28-93</a></p>
+      <p><a href="mailto:GameOver@gmail.com">GameOver@gmail.com</a></p>
+      <ul>
+        <li><a href="https://vk.com/">Vkontakte</a></li>
+        <li><a href="">Telegram</a></li>
+      </ul>
     </div>
-
-</body>
+  </body>
 </html>
