--- a/index.html
+++ b/index.html
@@ -76,6 +76,119 @@
       </ol>
     </div>
 
+    <div>
+      <form action="https://jsonplaceholder.typicode.com/posts" method="post">
+        
+        <fieldset>
+
+          <h1>Забронировать</h1>
+
+          <fieldset>
+            <label for="first_hall">
+              <input type="radio" name="hall_name" id="first_hall" value="80vibes">80's vibes
+            </label>
+            <label for="second_hall">
+              <input type="radio" name="hall_name" id="second_hall" value="starwars">Star wars
+            </label>
+            <label for="third_hall">
+              <input type="radio" name="hall_name" id="third_hall" value="west">Wild west
+            </label>
+            <label for="fourth_hall">
+              <input type="radio" name="hall_name" id="fourth_hall" value="neon">Neon style
+            </label>
+          </fieldset>
+
+          <fieldset>
+            <legend>Собери набор развлечений</legend>
+
+            <fieldset>
+              <legend>Приставка:</legend>
+
+              <label for="first_console">
+                <input type="radio" name="console" id="first_console" value="PlayStation">PlayStation
+              </label>
+              <label for="second_console">
+                <input type="radio" name="console" id="second_console" value="Sega">Sega Mega Drive
+              </label>
+              <label for="third_console">
+                <input type="radio" name="console" id="third_console" value="X-box">X-box One S
+              </label>
+              <label for="fourth_console">
+                <input type="radio" name="console" id="fourth_console" value="Dendy">Dendy
+              </label>
+            </fieldset>
+
+            <fieldset>
+              <legend>Настольные игры</legend>
+
+              <label for="first_game">
+                <input type="checkbox" name="game" id="first_game" value="jenga">Jenga
+              </label>
+              <label for="second_game">
+                <input type="checkbox" name="game" id="second_game" value="monopoly">Monopoly
+              </label>
+              <label for="third_game">
+                <input type="checkbox" name="game" id="third_game" value="manchkin">Манчкин
+              </label>
+              <label for="fourth_game">
+                <input type="checkbox" name="game" id="fourth_game" value="alias">Alias
+              </label>
+            </fieldset>
+
+            <fieldset>
+              <legend>Дополнительно</legend>
+
+              <label for="karaoke">
+                <input type="checkbox" name="karaoke" id="karaoke">Караоке
+              </label>
+              <label for="vr">
+                <input type="checkbox" name="vr" id="vr">VR
+              </label>
+            </fieldset>
+            
+          </fieldset>
+
+          <fieldset>
+            <legend>Выбери дату и время</legend>
+
+              <label for="date">Дата*
+                <input type="date" name="date" id="date" required>
+              </label>
+              <label for="time">Время*
+                <input type="time" name="time" id="time" required>
+              </label>
+              <br>
+              <label for="person">Количество человек*
+                <input type="number" name="person" id="person" required>
+              </label>
+              <br>
+              <label for="name">Имя*
+                <input type="text" name="name" id="name" required>
+              </label>
+              <br>
+              <label for="surname">Фамилия*
+                <input type="text" name="surname" id="surname" required>
+              </label>
+              <br>
+              <label for="phone_number">Номер телефона*
+                <input type="tel" name="phone_number" id="phone_number" required>
+              </label>
+              <br>
+              <label for="age">
+                <input type="checkbox" id="age">Я старше 18 лет
+              </label>
+          </fieldset>
+
+          <button>Забронировать</button>
+          <label for="processing">
+            <input type="checkbox" id="processing" required>Согласен на обработку данных 
+          </label>
+
+        </fieldset>
+
+      </form>
+    </div>
+
     <div id="about_us">
       <h1>О нас</h1>
       <p>
