--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="icon" type="image/svg+xml" href="img/icon.svg" />
     <link rel="icon" type="image/png" href="img/logo.png" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
@@ -22,7 +23,7 @@
           <li><a href="#halls">Залы</a></li>
           <li><a href="#about_us">О нас</a></li>
           <li><a href="#reserv">Бронь</a></li>
-          <li><a href="">Отзывы</a></li>
+          <li><a href="#reviews">Отзывы</a></li>
           <li><a href="#contacts">Контакты</a></li>
         </ul>
       </nav>
@@ -244,7 +245,7 @@
       </section>
 
       <address id="contacts">
-        <h2>Контакты</h2>
+        <p>Контакты</p>
         <p>г. Москва ул. Аквамарина. 16</p>
         <p><a href="tel:+79509302893">8(950)930-28-93</a></p>
         <p><a href="mailto:GameOver@gmail.com">GameOver@gmail.com</a></p>
