--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
     <link rel="icon" type="image/svg+xml" href="img/icon.svg" />
     <link rel="icon" type="image/png" href="img/logo.png" />
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="index.css">
   </head>
 
@@ -27,6 +26,7 @@
             <li><a href="#about_us">О нас</a></li>
             <li><a href="#reserv">Бронь</a></li>
             <li><a href="#reviews">Отзывы</a></li>
+            <li><a href="#questions">Частые вопросы</a></li>
             <li><a href="#contacts">Контакты</a></li>
           </ul>
         </nav>
@@ -331,6 +331,20 @@
               космоса.
             </p>
           </div>
+        </section>
+
+        <section id="questions">
+          <h2>Частые вопросы</h2>
+
+          <div>
+            <p class="popular__questions">Можно ли забронировать комнату онлайн?</p>
+            <p class="popular__questions">Могут ли мне вернуть деньги за бронь?</p>
+            <p class="popular__questions">Какая комната самая популярная?</p>
+            <p class="popular__questions">Как получить VIP карту?</p>
+            <p class="popular__questions">Какая комната самая популярная?</p>
+          </div>
+
+
         </section>
 
         <address id="contacts">
