--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <link rel="icon" type="image/svg+xml" href="img/icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="..img/icon.svg" />
     <link rel="icon" type="image/png" href="img/logo.png" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style/style.css" />
   </head>
 
   <body>
@@ -305,7 +305,7 @@
             <div class="about-us__citate">
               <blockquote>
                 <p class="about-us__citate-text">
-                  <span class="about-us___citate-quotes">&#10077;</span>
+                  <span class="about-us__citate-quotes">&#10077;</span>
                   GAME OVER - <br />
                   это место незабываемых впечатлений
                   <span class="about-us__citate-quotes">&#10078;</span>
