--- a/index.html
+++ b/index.html
@@ -340,47 +340,49 @@
         </div>
       </section>
 
-      <!--       <section id="reviews">
+      <section id="reviews">
         <div class="container">
-            <h2>ОТЗЫВЫ ПОСЕТИТЕЛЕЙ</h2>
-  
-            <div>
-              <figure>
-                <img src="" alt="Макс" />
-                <figcaption>Макс Самойлов</figcaption>
-              </figure>
-              <p>
-                Отмечали здесь день рождения с компанией друзей, все было очень
-                круто! VR очки это просто бомба, никогда еще я не был в таком
-                полном игровом погружении. Сервис на высоте!
-              </p>
-            </div>
-  
-            <div>
-              <figure>
-                <img src="" alt="Оксана" />
-                <figcaption>Оксана Григорьева</figcaption>
-              </figure>
-              <p>
-                Были в комнате Дикий Запад, пели в караоке под Шакиру, отличный
-                получился корпоратив! У нас в городе больше нет подобных
-                заведений.
-              </p>
-            </div>
-  
-            <div>
-              <figure>
-                <img src="" alt="Никита" />
-                <figcaption>Никита Ященко</figcaption>
-              </figure>
-              <p>
-                Немного подвисала игра в VR очках, а так все норм. Крутое
-                оформление комнаты в стиле звездный войн, попал в атмосферу
-                космоса.
-              </p>
-            </div>
-            </div>
-          </section> -->
+          <h2>ОТЗЫВЫ ПОСЕТИТЕЛЕЙ</h2>
+
+          <div class="reviews__content">
+            <figure class="reviews__photo">
+              <img class="reviews__img" src="/img/clients_photos/maks.png" alt="Макс" />
+              <figcaption>Макс Самойлов</figcaption>
+            </figure>
+            <p class="reviews__text">
+              Отмечали здесь день рождения с компанией друзей, все было очень
+              <br />
+              круто! VR очки это просто бомба, никогда еще я не был в таком
+              полном <br />
+              игровом погружении. Сервис на высоте!
+            </p>
+          </div>
+
+          <div class="reviews__content">
+            <figure class="reviews__photo">
+              <img class="reviews__img" src="/img/clients_photos/oksana.png" alt="Оксана" />
+              <figcaption>Оксана Григорьева</figcaption>
+            </figure>
+            <p class="reviews__text">
+              Были в комнате Дикий Запад, пели в караоке под Шакиру, отличный <br>
+              получился корпоратив! У нас в городе больше нет подобных
+              заведений.
+            </p>
+          </div>
+
+          <div class="reviews__content">
+            <figure class="reviews__photo reviews__last">
+              <img class="reviews__img" src="/img/clients_photos/nikita.png" alt="Никита" />
+              <figcaption>Никита Ященко</figcaption>
+            </figure>
+            <p class="reviews__text">
+              Немного подвисала игра в VR очках, а так все норм. Крутое <br>
+              оформление комнаты в стиле звездный войн, попал в атмосферу <br>
+              космоса.
+            </p>
+          </div>
+        </div>
+      </section>
 
       <section class="popular-questions" id="questions">
         <div class="container">
