--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <link rel="icon" type="image/svg+xml" href="..img/icon.svg" />
-    <link rel="icon" type="image/png" href="img/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="../img/icon.svg" />
+    <link rel="icon" type="image/png" href="../img/logo.png" />
     <link rel="stylesheet" href="style/style.css" />
   </head>
 
@@ -23,7 +23,7 @@
             <div class="game-over__banner">
               <img
                 class="game-over__img"
-                src="./img/HeadGO.png"
+                src="../img/HeadGO.png"
                 alt="Парень в VR очках"
               />
             </div>
@@ -346,7 +346,7 @@
 
           <div class="reviews__content">
             <figure class="reviews__photo">
-              <img class="reviews__img" src="./img/clients_photos/maks.png" alt="Макс" />
+              <img class="reviews__img" src="../img/clients_photos/maks.png" alt="Макс" />
               <figcaption>Макс Самойлов</figcaption>
             </figure>
             <p class="reviews__text">
@@ -360,7 +360,7 @@
 
           <div class="reviews__content">
             <figure class="reviews__photo">
-              <img class="reviews__img" src="./img/clients_photos/oksana.png" alt="Оксана" />
+              <img class="reviews__img" src="../img/clients_photos/oksana.png" alt="Оксана" />
               <figcaption>Оксана Григорьева</figcaption>
             </figure>
             <p class="reviews__text">
@@ -372,7 +372,7 @@
 
           <div class="reviews__content">
             <figure class="reviews__photo reviews__last">
-              <img class="reviews__img" src="./img/clients_photos/nikita.png" alt="Никита" />
+              <img class="reviews__img" src="../img/clients_photos/nikita.png" alt="Никита" />
               <figcaption>Никита Ященко</figcaption>
             </figure>
             <p class="reviews__text">
