--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
           <div class="about-us__wrapper">
             <div class="about-us__img">
               <img
-                src="/img/about_us/banner.jpg"
+                src="../img/about_us/banner.jpg"
                 alt="Набор картинок с развлечениями"
               />
             </div>
