--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <link rel="icon" type="image/svg+xml" href="./img/icon.svg" />
-    <link rel="icon" type="image/png" href="./img/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="../img/icon.svg" />
+    <link rel="icon" type="image/png" href="../img/logo.png" />
     <link rel="stylesheet" href="style/style.css" />
   </head>
 
@@ -23,7 +23,7 @@
             <div class="game-over__banner">
               <img
                 class="game-over__img"
-                src="./img/HeadGO.png"
+                src="../../img/HeadGO.png"
                 alt="Парень в VR очках"
               />
             </div>
@@ -294,7 +294,7 @@
           <div class="about-us__wrapper">
             <div class="about-us__img">
               <img
-                src="../img/about_us/banner.jpg"
+                src="../../img/about_us/banner.jpg"
                 alt="Набор картинок с развлечениями"
               />
             </div>
