--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="game-over__banner">
               <img
                 class="game-over__img"
-                src="../img/HeadGO.png"
+                src="img/HeadGO.png"
                 alt="Парень в VR очках"
               />
             </div>
