--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
                   <br />аппаратура
                 </p>
               </div>
-              <button class="game-over__btn">
-                Забронировать
-              </button>
+              <button class="game-over__btn">Забронировать</button>
             </div>
             <div class="game-over__banner">
               <img
@@ -64,6 +62,33 @@
                 src="img/HeadGO.png"
                 alt="Парень в VR очках"
               />
+            </div>
+            <div class="game-over__round-btn">
+              <svg
+                width="97"
+                height="97"
+                viewBox="0 0 97 97"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <circle cx="48.5" cy="48.5" r="48" stroke="white" />
+                <rect
+                  x="34.4255"
+                  y="43.9161"
+                  width="1.82001"
+                  height="20.0201"
+                  transform="rotate(-44.9975 34.4255 43.9161)"
+                  fill="white"
+                />
+                <rect
+                  x="48.5807"
+                  y="58.0737"
+                  width="1.82001"
+                  height="20.0201"
+                  transform="rotate(-134.997 48.5807 58.0737)"
+                  fill="white"
+                />
+              </svg>
             </div>
           </div>
         </div>
@@ -547,7 +572,6 @@
         <h2>Контакты</h2>
         <address class="contacts" id="contacts">
           <div class="container">
-
             <div class="contacts__info">
               <div class="contacts__text">
                 <div class="contacts__address">
