--- a/index.html
+++ b/index.html
@@ -608,9 +608,9 @@
 
       <section class="popular-questions" id="questions">
         <div class="container">
-          <h2>Частые вопросы</h2>
+          <h2 class="popular-questions__title">Частые вопросы</h2>
 
-          <div>
+          <div class="popular-question__items">
             <p class="popular-questions__text">
               Можно ли забронировать комнату онлайн?
             </p>
